<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextSearchPokemon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/input_pokemon_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="searchForPokemon"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextSearchPokemon"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:contentDescription="@string/pokemon_picture"
        app:layout_constraintBottom_toTopOf="@+id/idTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchPokemon"
        app:srcCompat="@drawable/bulbasaur" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="casual"
        android:text="@string/pokedex_no"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:ignore="AllCaps" />

    <TextView
        android:id="@+id/idValueTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/idTextView"
        app:layout_constraintStart_toEndOf="@+id/idTextView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/heightTextView"
        app:layout_constraintStart_toStartOf="@+id/idTextView"
        tools:ignore="AllCaps" />

    <TextView
        android:id="@+id/nameValueTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/idValueTextView" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="casual"
        android:text="@string/height"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/weightTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        tools:ignore="AllCaps" />

    <TextView
        android:id="@+id/heightValueTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightTextView"
        app:layout_constraintStart_toStartOf="@+id/nameValueTextView" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/heightTextView"
        tools:ignore="AllCaps" />

    <TextView
        android:id="@+id/weightValueTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightTextView"
        app:layout_constraintStart_toStartOf="@+id/heightValueTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="201dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>